tests/errors/flow/while-non-constant-cond-no-return.fn
---
Description: While loop with non-constant condition cannot guarantee return
Expected: FN4001
---

type Program
{
    fn Bad(cond: bool) -> i32
    {
        while cond
        {
            return 1
        }
    }

    fn Main -> i32
    {
        return Bad(true)
    }
}
